--- a/ga/index.html
+++ b/ga/index.html
@@ -8,6 +8,7 @@
   <script language="javascript" type="text/javascript" src="../assets/scripts/printers.js"></script>
   <script language="javascript" type="text/javascript" src="../assets/scripts/creaters.js"></script>
   <script language="javascript" type="text/javascript" src="../assets/scripts/classes.js"></script>
+  <script language="javascript" type="text/javascript" src="../assets/scripts/ga.js"></script>
   <script language="javascript" type="text/javascript" src="../assets/scripts/lexicoOrder.js"></script>
   
   
@@ -27,6 +28,12 @@
     <div class="options">
       <div class="options-item">         
         <input type="number" class="number-input" name="qtdNodes" id="qtdNodes" placeholder="Quantidade de nós">
+      </div>
+      <div class="options-item">         
+        <input type="number" class="number-input" name="popSize" id="popSize" placeholder="Tamanho da população">
+      </div>
+      <div class="options-item">         
+        <input type="number" class="number-input" name="mutatioRate" id="mutation" placeholder="Taxa de mutação">
       </div>
       <div class="options-item">         
         <input type="number" class="number-input" name="maxRotas" id="maxRotas" placeholder="Tentativas de Rotas">
