--- a/lexicoGaAllRoutes/index.html
+++ b/lexicoGaAllRoutes/index.html
@@ -8,6 +8,7 @@
   <script language="javascript" type="text/javascript" src="../assets/scripts/printers.js"></script>
   <script language="javascript" type="text/javascript" src="../assets/scripts/creaters.js"></script>
   <script language="javascript" type="text/javascript" src="../assets/scripts/classes.js"></script>
+  <script language="javascript" type="text/javascript" src="../assets/scripts/ga.js"></script>
   <script language="javascript" type="text/javascript" src="../assets/scripts/lexicoOrder.js"></script>
   
   
@@ -16,12 +17,12 @@
 
 <body>
     <ul class="menu">
-      <li><a href="../lexico/index.html">Lexicographic</a></li>
-      <li><a href="../ga/index.html">Genetic Algorithm </a></li>
-      <li><a href="../lexicoGa/index.html">Both</a></li>
-      <li><a href="../lexicoGaAllRoutes/index.html">Full Routes</a></li>
-      <li><a href="../autor/index.html">Author</a></li>
-    </ul>
+        <li><a href="../lexico/index.html">Lexicographic</a></li>
+        <li><a href="../ga/index.html">Genetic Algorithm </a></li>
+        <li><a href="../lexicoGa/index.html">Both</a></li>
+        <li><a href="../lexicoGaAllRoutes/index.html">Full Routes</a></li>
+        <li><a href="../autor/index.html">Author</a></li>
+      </ul>
       
 
     <div class="options">
@@ -29,7 +30,10 @@
         <input type="number" class="number-input" name="qtdNodes" id="qtdNodes" placeholder="Quantidade de nós">
       </div>
       <div class="options-item">         
-        <input type="number" class="number-input" name="maxRotas" id="maxRotas" placeholder="Tentativas de Rotas">
+        <input type="number" class="number-input" name="popSize" id="popSize" placeholder="Tamanho da população">
+      </div>
+      <div class="options-item">         
+        <input type="number" class="number-input" name="mutation" id="mutation" placeholder="Taxa de mutação">
       </div>
       
       <div class="options-item">
