--- a/ga/index.html
+++ b/ga/index.html
@@ -20,8 +20,9 @@
       <li><a href="../lexico/index.html">Lexicographic</a></li>
       <li><a href="../ga/index.html">Genetic Algorithm </a></li>
       <li><a href="../lexicoGa/index.html">Both</a></li>
+      <!--
       <li><a href="../lexicoGaAllRoutes/index.html">Full Routes</a></li>
-      <li><a href="../autor/index.html">Author</a></li>
+      -->  <li><a href="../autor/index.html">Author</a></li>
     </ul>
       
 
@@ -37,6 +38,10 @@
       </div>
       <div class="options-item">         
         <input type="number" class="number-input" name="maxRotas" id="maxRotas" placeholder="Tentativas de Rotas">
+      </div>
+
+      <div class="options-item chk-item">          
+        <input type="checkbox" id="chkFullRoutes"> Full Routes
       </div>
       
       <div class="options-item">
